--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,9 @@
     <div class="offset-sm-1 col-sm-2 text-center">
       <div>
         <figure>
+          <% if @user.profile_image.attached? %>
+                <%= image_tag @user.profile_image.variant(resize: "400x400"), class: "profile_image" %>
+              <% end %>
           <%#= attachment_image_tag @user, :profile_image, :fill, 1000, 1000,fallback: "no-image.png", class: "profile_image" %>
         </figure>
       </div>
