--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,2 +1,90 @@
-<h1>Entries#show</h1>
-<p>Find me in app/views/entries/show.html.erb</p>
+<div class="text-center m-5">
+  <h1>アニメページ</h1>
+</div>
+
+<section class="section">
+  <div class="row">
+    <div class="col-md-8 mb-3">
+      <div class="card">
+        <div class="card-image-top">
+          <figure class="image">
+            <%#= attachment_image_tag @cat, :cat_image, :fill, 700, 500, fallback: "no-image.png", class: "cat_image" %>
+          </figure>
+        </div>
+        <div class="card-body">
+          <h4 class="card-title"><%= @entry.title %></h4>
+          <table class="table">
+            <tr>
+              <th>アピール</th>
+            </tr>
+            <tr>
+              <td><%= simple_format @entry.introduction %></td>
+            </tr>
+            <tr>
+              <td><%= @entry.directedby %></td>
+            </tr>
+            <tr>
+              <td><%= @entry.screenplay %></td>
+            </tr>
+            <tr>
+              <td><%= @entry.character %></td>
+            </tr>
+            <tr>
+              <td><%= simple_format @entry.cast %></td>
+            </tr>
+            <tr>
+              <td><%= @entry.productioncom %></td>
+            </tr>
+            <tr>
+              <td><%= @entry.productiontime %></td>
+            </tr>
+            <tr>
+              <td><%#= simple_format @entry.productioncom %></td>
+            </tr>
+          </table>
+          
+          <% if @entry.user.id == current_user.id %>
+            <div class="pt-4">
+              <%= link_to edit_entry_path(@entry), class: "btn btn-primary btn-sm m-3" do %>
+                <span>
+                  <i class="fas fa-cat faa-wrench animated"></i>
+                </span>
+                編集
+              <% end %>
+              <%= link_to entry_path(@entry), method: :delete, data: { confirm: "本当にアニメ情報を削除してもよろしいですか?" }, class: "btn btn-danger btn-sm" do %>
+                <span>
+                  <i class="fas fa-cat faa-wrench animated-hover" aria-hidden="true"></i>
+                </span>
+                削除
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 mb-3">
+      <div class="card bg-light">
+        <div class="card-body">
+          <table class="table">
+            <tr>
+              <td>By <%= @entry.user.name %></td>
+            </tr>
+            <tr>
+              <td><%= @entry.user.profile %></td>
+            </tr>
+            <tr>
+              <td>
+                <%= link_to user_path(@entry.user) do %>
+                  <span>
+                    <i class="fas fa-user" aria-hidden="true"></i>
+                  </span>
+                  <%= @entry.user.name %> さんのページへ
+                <% end %>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
