--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div>
-      <%#= render 'cats/cats', cats: @cats %>
+      <%= render 'entries/entries', entries: @entries %>
     </div>
   </div>
 </section>
