--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,13 +9,13 @@
       <ul class="navbar-nav">
         <% if logged_in? %>
           <li class="nav-item"><%= link_to 'ユーザ', users_path, class: 'nav-link' %></li>
-          <li class="nav-item"><%#= link_to 'にゃんこ', cats_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'アニメ', entries_path, class: 'nav-link' %></li>
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><%= current_user.name %></a>
             <ul class="dropdown-menu dropdown-menu-right">
               <li class="dropdown-item"><%= link_to 'マイページ', user_path(current_user) %></li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"><%#= link_to 'にゃんこ新規投稿', new_cat_path %></li>
+              <li class="dropdown-item"><%= link_to 'アニメレビュー新規投稿', new_entry_path %></li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-item"><%= link_to 'ログアウト', logout_path, method: :delete %></li>
             </ul>
