--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,6 @@
+<% @page_title = "レビュー新規投稿" %>
 <div class="text-center mt-5 mb-3">
-  <h1>アニメ新規投稿</h1>
+  <h1><%= @page_title %></h1>
 </div>
 
 <div class="row mt-3">
@@ -15,7 +16,7 @@
 
       <div class="form-group">
         <%= f.label :introduction, '紹介' %>
-        <%= f.text_area :introduction, class: 'form-control' %>
+        <%= f.text_area :introduction, class: 'form-control', rows: 7 %>
       </div>
 
       <div class="form-group">
@@ -34,8 +35,13 @@
       </div>
 
       <div class="form-group">
+        <%= f.label :music, '音楽' %>
+        <%= f.text_field :music, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
         <%= f.label :cast, 'キャスト' %>
-        <%= f.text_field :cast, class: 'form-control' %>
+        <%= f.text_area :cast, class: 'form-control', rows: 2 %>
       </div>
 
       <div class="form-group">
@@ -45,15 +51,10 @@
 
       <div class="form-group">
         <%= f.label :productiontime, '製作時期', for: "entry_productiontime_li" %>
-        <%= f.date_select :productiontime, start_year: 1970, end_year: Time.current.year, use_month_numbers: true, class: 'form-control' %>
+        <%= f.date_select :productiontime, start_year: 1970, end_year: Time.current.year, discard_month:true, discard_day: true, class: 'form-control' %>
       </div>
 
-      <div class="form-group">
-        <%#= f.label :cat_image, 'にゃんこ画像' %>
-        <%#= f.attachment_field :cat_image, class: 'form-control' %>
-      </div>
-
-      <%= f.submit '投  稿', class: 'btn btn-primary btn-block' %>
+      <%= f.submit '投  稿', class: 'btn btn-primary btn-block mb-5' %>
     <% end %>
   </div>
 </div>
