--- a/app/views/entry_images/_form.html.erb
+++ b/app/views/entry_images/_form.html.erb
@@ -1,13 +1,11 @@
-<%#= render "shared/errors", obj: @image %>
-<%= render 'layouts/error_messages', model: form.object %>
+<%= render 'layouts/error_messages', model: f.object %>
 
-<table class="attr">
-  <tr>
-    <th><%= form.label :new_profile_entry_image %></th>
-    <td><%= form.file_field :new_profile_entry_image %></td>
-  </tr>
-  <tr>
-    <th><%= form.label :alt_text %></th>
-    <td><%= form.text_field :alt_text, size: 40 %></td>
-  </tr>
-</table>
+  <div class="form-group">
+    <%= f.label :new_profile_entry_image %>
+    <%= f.file_field :new_profile_entry_image, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :alt_text %>
+    <%= f.text_field :alt_text, size: 40, class: "form-control" %>
+  </div>
