--- a/app/views/evaluations/edit.html.erb
+++ b/app/views/evaluations/edit.html.erb
@@ -1,15 +1,15 @@
-<% @page_title = "ブログ記事への画像編集" %>
-<div class="text-center mt-5 mb-5">
+<% @page_title = "評価編集" %>
+<div class="text-center mt-5 mb-3">
   <h1><%= @page_title %></h1>
+  <h2><%#= @entry.title %></h2>
 </div>
 
 <div class="row mt-3">
   <div class="col-sm-6 offset-sm-3">
-    <% url = entry_image_path(@entry, @image) %>
-    <%= form_for @image, as: "image", url: url do |f| %>
+    <% url = entry_evaluation_path(@entry) %>
+    <%= form_for @evaluation, as: "evaluation", url: url do |f| %>
       <%= render "form", f: f %>
       <%= f.submit '編  集', class: 'btn btn-primary btn-block mb-5' %>
     <% end %>
   </div>
 </div>
-
