--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,6 @@
+<% @page_title = "ユーザ一覧" %>
+<div class="text-center m-5">
+  <h1><%= @page_title %></h1>
+</div>
+
 <%= render 'users', users: @users %>
