--- a/app/views/entries/_entries.html.erb
+++ b/app/views/entries/_entries.html.erb
@@ -4,9 +4,6 @@
       <div class="card text-center">
         <div class="card-image-top">
           <figure class="image">
-            <%= link_to entry_path(entry) do %>
-              <%#= attachment_image_tag entry, :entry_image, :fill, 1000, 1000, fallback: "no-image.png", class: "entry_image" %>
-            <% end %>
             <% if entry.images.order(:id)[0].present? %>
                 <%= link_to entry_path(entry) do %>
                   <%= image_tag entry.images.order(:id)[0].profile_entry_image.variant(combine_options:{gravity: :center, resize:"1000x600^", crop:"1000x600+0+0"}).processed, class: "entry_image",
@@ -21,32 +18,11 @@
           </figure>
         </div>
         <div class="card-body">
-          <div class="d-flex justify-content-around mb-3">
-            <div>
-              <%= link_to entry_path(entry), class: "btn btn-success btn-sm" do %>
-                <span>
-                  <i class="fas fa-cat faa-bounce animated"></i>
-                </span>
-                詳細
-              <% end %>
-            </div>
+          <div class="d-flex justify-content-center mb-3">
+              <%= link_to '詳 細', entry_path(entry), class: "btn btn-success btn-sm mr-3" %>
             <% if entry.user.id == current_user.id %>
-              <div>
-                <%= link_to edit_entry_path(entry), class: "btn btn-primary btn-sm" do %>
-                  <span>
-                    <i class="fas fa-cat faa-wrench animated"></i>
-                  </span>
-                  編集
-                <% end %>
-              </div>
-              <div>
-                <%= link_to entry_path(entry), method: :delete, data: { confirm: "本当ににゃんこ情報を削除してもよろしいですか?" }, class: "btn btn-danger btn-sm" do %>
-                  <span>
-                    <i class="fas fa-cat faa-wrench animated-hover" aria-hidden="true"></i>
-                  </span>
-                  削除
-                <% end %>
-              </div>
+                <%= link_to '編 集', edit_entry_path(entry), class: "btn btn-primary btn-sm mr-3" %>
+                <%= link_to '削 除', entry_path(entry), method: :delete, data: { confirm: "本当ににゃんこ情報を削除してもよろしいですか?" }, class: "btn btn-danger btn-sm" %>
             <% end %>
           </div>
           <div>
