--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -39,30 +39,10 @@
           <% if logged_in? %>
             <% if @entry.user.id == current_user.id %>
               <div class="pt-4">
-                <%= link_to edit_entry_path(@entry), class: "btn btn-primary btn-sm m-3" do %>
-                  <span>
-                    <i class="fas fa-cat faa-wrench animated"></i>
-                  </span>
-                  編集
-                <% end %>
-                <%= link_to entry_images_path(@entry), class: "btn btn-success btn-sm mr-3" do %>
-                  <span>
-                    <i class="fas fa-cat faa-wrench animated"></i>
-                  </span>
-                  画像
-                <% end %>
-                <%= link_to entry_evaluation_path(@entry), class: "btn btn-warning btn-sm mr-3" do %>
-                  <span>
-                    <i class="fas fa-cat faa-wrench animated"></i>
-                  </span>
-                  評価
-                <% end %>
-                <%= link_to entry_path(@entry), method: :delete, data: { confirm: "本当にアニメレビューを削除してもよろしいですか?" }, class: "btn btn-danger btn-sm" do %>
-                  <span>
-                    <i class="fas fa-cat faa-wrench animated-hover" aria-hidden="true"></i>
-                  </span>
-                  削除
-                <% end %>
+                <%= link_to '編 集', edit_entry_path(@entry), class: "btn btn-primary btn-sm m-3" %>
+                <%= link_to '画 像', entry_images_path(@entry), class: "btn btn-success btn-sm mr-3" %>
+                <%= link_to '評 価', entry_evaluation_path(@entry), class: "btn btn-warning btn-sm mr-3" %>
+                <%= link_to '削 除', entry_path(@entry), method: :delete, data: { confirm: "本当にアニメレビューを削除してもよろしいですか?" }, class: "btn btn-danger btn-sm" %>
               </div>
             <% end %>
           <% end %>
