--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -38,17 +38,9 @@
   <p>評価がありません。</p>
 <% end %>
 
-<%# unless @entry.evaluation.present? %>
-  <%#= link_to '評価', new_entry_evaluation_path(@entry), class: "btn btn-primary btn-sm m-3" %>
-<%# end %>
 <% if @entry.evaluation.present? %>
   <%= link_to '評価編集', edit_entry_evaluation_path(@entry), class: "btn btn-primary btn-sm m-3" %>
-   <%= link_to entry_evaluation_path(@entry), method: :delete, data: { confirm: "本当にアニメ評価を削除してもよろしいですか?" }, class: "btn btn-danger btn-sm" do %>
-    <span>
-      <i class="fas fa-cat faa-wrench animated-hover" aria-hidden="true"></i>
-    </span>
-    削除
-  <% end %>
+   <%= link_to '削 除', entry_evaluation_path(@entry), method: :delete, data: { confirm: "本当にアニメ評価を削除してもよろしいですか?" }, class: "btn btn-danger btn-sm" %>
 <% else %>
   <%= link_to '評価', new_entry_evaluation_path(@entry), class: "btn btn-primary btn-sm m-3" %>
 <% end %>
