--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,22 +10,22 @@
       <%= render 'layouts/error_messages', model: f.object %>
       
       <div class="form-group">
-        <%= f.label :name, '名前' %>
+        <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control' %>
       </div>
 
       <div class="form-group">
-        <%= f.label :email, 'メール' %>
+        <%= f.label :email %>
         <%= f.email_field :email, class: 'form-control' %>
       </div>
 
       <div class="form-group">
-        <%= f.label :profile, 'プロフィール' %>
+        <%= f.label :profile %>
         <%= f.text_area :profile, class: 'form-control' %>
       </div>
 
       <div class="form-group">
-        <%= f.label :new_profile_image, 'プロフィール画像' %>
+        <%= f.label :new_profile_image %>
         <%= f.file_field :new_profile_image, class: 'form-control' %>
       </div>
 
