--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,53 +29,10 @@
       <div id="target">
         <div  id="target1" class="d-flex flex-row mb-3">
           <% if @user.id == current_user.id %>
-            <%= link_to edit_user_path(@user), class: "btn btn-primary btn-sm mr-4" do %>
-              <span>
-                <i class="fas fa-user faa-bounce animated-hover"></i>
-              </span>
-              編集
-            <% end %>
-            <%= link_to user_path(@user), method: :delete, data: { confirm: "本当にユーザ登録を解除してもよろしいですか?" }, class: "btn btn-danger btn-sm" do %>
-              <span>
-                <i class="fas fa-user faa-wrench animated-hover" aria-hidden="true"></i>
-              </span>
-              削除
-            <% end %>
+            <%= link_to '編 集', edit_user_path(@user), class: "btn btn-primary btn-sm mr-4" %>
+            <%= link_to '削 除', user_path(@user), method: :delete, data: { confirm: "本当にユーザ登録を解除してもよろしいですか?" }, class: "btn btn-danger btn-sm" %>
           <% end %>
-          <div>
-            <%#= render 'relationships/follow_button', user: @user %>
-          </div>
         </div>
-
-<%
-=begin
-%>     
-        <div id="target1" class="d-flex flex-row mb-3">
-          <%#= link_to followings_user_path(@user), class: "btn btn-primary btn-sm mr-4" do %>
-            フォロー中
-            <span class="badge badge-success">
-              <%#= @count_followings %>
-            </span>
-          <%# end %>
-          <%#= link_to followers_user_path(@user), class: "btn btn-primary btn-sm" do %>
-            フォロワー
-            <span class="badge badge-secondary">
-              <%#= @count_followers %>
-            </span>
-          <%# end %>
-        </div>
-        <div>
-          <%#= link_to likes_user_path(@user), class: "text-danger btn btn-primary btn-sm" do %>
-            <i class="fas fa-heart fa-lg faa-pulse animated"></i>
-            <span class="badge badge-secondary">
-              <%#= @count_likes %>
-            </span>
-          <%# end %>
-        </div>
-<%
-=end
-%>
-
       </div>
     </div>
   </div>
