--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -11,7 +11,7 @@
       
       <div class="form-group">
         <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control' %>
+        <%= f.text_area :title, class: 'form-control' %>
       </div>
 
       <div class="form-group">
@@ -21,32 +21,32 @@
 
       <div class="form-group">
         <%= f.label :directedby %>
-        <%= f.text_field :directedby, class: 'form-control' %>
+        <%= f.text_area :directedby, class: 'form-control' %>
       </div>
 
       <div class="form-group">
         <%= f.label :screenplay %>
-        <%= f.text_field :screenplay, class: 'form-control' %>
+        <%= f.text_area :screenplay, class: 'form-control' %>
       </div>
       
       <div class="form-group">
         <%= f.label :character %>
-        <%= f.text_field :character, class: 'form-control' %>
+        <%= f.text_area :character, class: 'form-control' %>
       </div>
 
       <div class="form-group">
         <%= f.label :music %>
-        <%= f.text_field :music, class: 'form-control' %>
+        <%= f.text_area :music, class: 'form-control' %>
       </div>
 
       <div class="form-group">
         <%= f.label :cast %>
-        <%= f.text_area :cast, class: 'form-control', rows: 2 %>
+        <%= f.text_area :cast, class: 'form-control' %>
       </div>
 
       <div class="form-group">
         <%= f.label :productioncom %>
-        <%= f.text_field :productioncom, class: 'form-control' %>
+        <%= f.text_area :productioncom, class: 'form-control' %>
       </div>
 
       <div class="form-group">
