--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,6 @@
       <div>
         <figure>
           <% if @user.profile_image.attached? %>
-            <%#= image_tag @user.profile_image.variant(combine_options:{gravity: :center, resize:"1000x1000^", crop:"1000x1000+0+0"}).processed, class: "profile_image" %>
             <%= image_tag @user.profile_image.variant(combine_options:{gravity: :center, resize:"1000x1000^", crop:"1000x1000+0+0"}).processed, class: "profile_image" %>
           <% end %>
         </figure>
@@ -24,7 +23,7 @@
           <% end %>
         </div>
       </div>
-      <div><%= @user.profile %></div>
+      <div><%= simple_format @user.profile %></div>
     </div>
     <div class="col-sm-4 text-left">
       <div id="target">
