--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,6 +37,6 @@
     </div>
   </div>
   <div>
-    <%= render 'entries/entries', entries: @entries %>
+    <%= render 'entries/entriesuser', entries: @entries %>
   </div>
 </section>
