--- a/app/views/users/hoshi45.html.erb
+++ b/app/views/users/hoshi45.html.erb
@@ -6,7 +6,7 @@
 <div class="row">
   <% if @entries.present? %>
     <% @entries.each do |entry| %>
-      <% if entry.evaluation.compreh == 4.5 %>
+      <% if entry.evaluation&.compreh == 4.5 %>
         <%= render "entries/entries", entry: entry %>
       <% end %>
     <% end %>
